--- a/mi pagina web/html/contacto.html
+++ b/mi pagina web/html/contacto.html
@@ -11,36 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&family=Montserrat:wght@500;700;800&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>erika romero</title>
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light  ">
-          <div class="container fluid">
-            <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="340"
-               alt="" srcset=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link " href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../html/aboutme.html">SOBRE MI</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../html/portfolio.html">PORFOLIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../html/contacto.html">CONTACTO</a>
-                </li>
-              </ul>
-            </div>
+      <nav class="navbar navbar-expand-lg navbar-light  ">
+        <div class="container fluid">
+          <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300"
+             alt="" srcset=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="../html/portfolio.html">PORFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="html/contacto.html">CONTACTO</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
     </header>
        <section>
         <div>
