--- a/mi pagina web/index.html
+++ b/mi pagina web/index.html
@@ -15,12 +15,11 @@
     <title>erika romero</title>
   </head>
 
-
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light  ">
         <div class="container fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="340"
+          <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="300"
              alt="" srcset=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,9 +28,6 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="html/aboutme.html">SOBRE MI</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="html/portfolio.html">PORFOLIO</a>
@@ -49,27 +45,42 @@
       <section class="row mt-5 pt-5" id="hero">
           <div class="col-md-6 col-sm-12">
             <div class="">
-              <h1>HOLA </h1>
-              <h1 class="carafeliz">:D</h1>
             </div>
-              <h2>bienvenidos a mi website</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus possimus reprehenderit ullam? Quaerat
-                  sit nesciunt a eligendi animi explicabo, maiores odio facere illo!</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, blanditiis.</p>
-          </div>
-          <div class="col-md-5 col-sm-12">
-              <img src="img/erikainicio.png" class="img-fluid" alt="erika">
+              <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
+          <h3>John Maeda</h3>
+          <p>Diseño gráfico / Ilustración / UX IU</p>
+          <hr width="90%" >
           </div>
       </section>
-   
+    </main>
 
-      </section>
+  <div class="col-lg-7 col-sm-12"> <p id="sobremi">SOBRE MI</p></div>
+  <section  class="seccion2">
+    <div class="container fluid">
+      <div class="row">
 
-  </main>
+        <div class="col-lg-5 col-sm-12"><h1>HOLA :D</h1>
+          <h2>Bienvenidos a mi web site</h2>
+          <h4>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
+           Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
+           Si deseas conocer un poco mas mi trabajo te invito a ver  mi portfolio.</h4></div>
+        <div class="col-md-5 col-sm-12" id="erika" >
+          <img src="img/erika incio.png" class="img-fluid" alt="erika" width="450px" >
+        </div>
+      </div>
+    </div>
+    <div class="container fluid"></div>
+  <div class= > 
+    
+
+
+  </div>
+</section>
 
 <footer>
     <div class="container fluid">
        <div class="row pt-3" >
+   
 
         <div class="col-sm-12 col-md-6 ">
           <p>Todos los derechos reservados</p>
@@ -85,7 +96,8 @@
           <img src="img/instagram.png" class="img-fluid" alt="" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <img src="img/facebook.png" class="img-fluid" alt="" width="28px">
+         <a href="https://www.facebook.com/erika.mver"> <img src="img/facebook.png" class="img-fluid" alt="" width="28px">
+         </a>
         </div>
 
        </div>
