avance en estructura

--- a/mi pagina web/html/portfolio.html
+++ b/mi pagina web/html/portfolio.html
@@ -41,18 +41,27 @@
   </header>
   <main class="container fluid">
     <img src="../img/portfolio.jpg" class="img-fluid" alt="...">
+    <div class="col-lg-7 col-sm-12"> <p id="sobremi">SOBRE MI</p></div>
     <div class="text-center">
       <img src="../img/identidad.png" class="rounded" alt="..." width="60%">
     </div>
+    <p>IDENTIDAD CORPORATIVA</p>
+          <hr width="90%" >
     <div class="text-center">
       <img src="../img/etiquetas.png" class="rounded" alt="..." width="60%">
     </div>
+    <p>ETIQUETAS Y EMPAQUES</p>
+          <hr width="90%" >
     <div class="text-center">
       <img src="../img/uxui.png" class="rounded" alt="..." width="60%">
     </div>
+    <p>PROYECTOS UX/UI</p>
+          <hr width="90%" >
     <div class="text-center">
       <img src="../img/ilustracion.png" class="rounded" alt="..." width="60%">
     </div>
+    <p>ILUSTRACIONES</p>
+    <hr width="90%" >
     
   </main>
 </footer> 
