--- a/mi pagina web/index.html
+++ b/mi pagina web/index.html
@@ -19,7 +19,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light  ">
         <div class="container fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="300"
+          <a class="navbar-brand" href=
+          "#"><img src="img/logo.png" class="img-fluid" width="300"
              alt="" srcset=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,15 +45,16 @@
     <main class="container fluid">
       <section class="row mt-5 pt-5" id="hero">
           <div class="col-md-6 col-sm-12">
-            <div class="">
-            </div>
+            <div class="frase">
               <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
-          <h3>John Maeda</h3>
-          <p>Diseño gráfico / Ilustración / UX IU</p>
-          <hr width="90%" >
+              <h3>John Maeda</h3>
           </div>
       </section>
     </main>
+    <div class="piedeimagen">
+      <p>Diseño gráfico / Ilustración / UX IU</p>
+      <hr width="80%" >
+    </div>
 
   <div class="col-lg-7 col-sm-12"> <p id="sobremi">SOBRE MI</p></div>
   <section  class="seccion2">
