--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>erika romero</title> <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&family=Montserrat:wght@500;700;800&display=swap" rel="stylesheet">
+    <title>erika romero</title> 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilos.css">
@@ -56,7 +52,12 @@
       <hr width="80%" >
     </div>
 
-  <div class="col-lg-7 col-sm-12"> <p id="sobremi">SOBRE MI</p></div>
+  
+  <div class= "container fluid ">
+
+     <p >SOBRE MI</p>
+  </div>
+
   <section  class="seccion2">
     <div class="container fluid">
       <div class="row">
