--- a/index.html
+++ b/index.html
@@ -38,37 +38,33 @@
       </nav>
     </header>
 
-    <main class="container fluid">
-      <section class="row mt-5 pt-5" id="hero">
+    <main class="container fluid frase">
           <div class="col-md-6 col-sm-12">
-            <div class="frase">
               <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
               <h3>John Maeda</h3>
           </div>
       </section>
     </main>
-    <div class="piedeimagen">
-      <p>Diseño gráfico / Ilustración / UX IU</p>
+    <div class="piedeimagen container fluid ">
+      <p>DISEÑO GRÁFICO / ILUSTRACIÓN / UX IU</p>
       <hr width="80%" >
     </div>
 
   
-  <div class= "container fluid ">
+  <div class= "sobremi container fluid">
 
-     <p >SOBRE MI</p>
+     <p>SOBRE MI</p>
   </div>
 
-  <section  class="seccion2">
-    <div class="container fluid">
+  <section  class="seccion2 container fluid ">
       <div class="row">
-
-        <div class="col-lg-5 col-sm-12"><h1>HOLA :D</h1>
+        <div class="col-lg-5 col-sm-12 columna1"><h1>HOLA :D</h1>
           <h2>Bienvenidos a mi web site</h2>
-          <h4>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
+          <h3>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
            Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
-           Si deseas conocer un poco mas mi trabajo te invito a ver  mi portfolio.</h4></div>
+           Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3></div>
         <div class="col-md-5 col-sm-12" id="erika" >
-          <img src="img/erika incio.png" class="img-fluid" alt="erika" width="450px" >
+          <img src="img/erikainicio.png" class="img-fluid" alt="erika" height="500" >
         </div>
       </div>
     </div>
