--- a/index.html
+++ b/index.html
@@ -50,21 +50,29 @@
       <hr width="80%" >
     </div>
 
-  
-  <div class= "sobremi container fluid">
-
-     <p>SOBRE MI</p>
-  </div>
 
   <section  class="seccion2 container fluid ">
+   <img src="img/sobremi.png" class="img-fluid sobremi"  alt="sobre mi">
       <div class="row">
-        <div class="col-lg-5 col-sm-12 columna1"><h1>HOLA :D</h1>
+        <div class="col-xxl-5 col-md-6  col-sm-12 columna1">
+          <h1>HOLA :D</h1>
           <h2>Bienvenidos a mi web site</h2>
           <h3>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
            Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
-           Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3></div>
-        <div class="col-md-5 col-sm-12" id="erika" >
-          <img src="img/erikainicio.png" class="img-fluid" alt="erika" height="500" >
+           Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3>
+           <div class="container logos">
+            <div class="row ">
+              <div class="col"><img src="img/illustrator.png" width="45px" alt="adobe illustrator"></div>
+              <div class="col"><img src="img/photoshop.png" width="45px" alt="adobe photoshop"></div>
+              <div class="col"><img src="img/indesing.png" width="45px" alt="adobe indesing"></div>
+              <div class="col"><img src="img/afterefects.png"  width="45px" alt="adobe afterefects"></div>
+              <div class="col"><img src="img/corel.png"  width="45px" alt="corel draw"></div>
+              <div class="col"><img src="img/figma.png"  width="45px" alt="figma"></div>
+            </div>
+          </div>
+       </div>
+           <div class="col-xxl-5 col-md-5 col-sm-12" id="erika" >
+          <img src="img/erikainicio.png" class="img-fluid" alt="erika" >
         </div>
       </div>
     </div>
@@ -89,13 +97,13 @@
         </div>
 
         <div class="col-sm-4 col-md-1">
-          <img src="img/behance.png" class="img-fluid" width="28px">
+          <img src="img/behance.png" class="img-fluid" alt="logo behance" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <img src="img/instagram.png" class="img-fluid" alt="" width="28px">
+          <img src="img/instagram.png" class="img-fluid" alt="logo instagram" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-         <a href="https://www.facebook.com/erika.mver"> <img src="img/facebook.png" class="img-fluid" alt="" width="28px">
+         <a href="https://www.facebook.com/erika.mver"> <img src="img/facebook.png" class="img-fluid" alt="logo facebook" width="28px">
          </a>
         </div>
 
