--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
   <section  class="seccion2 container fluid ">
    <img src="img/sobremi.png" class="img-fluid sobremi"  alt="sobre mi">
       <div class="row">
-        <div class="col-xxl-5 col-md-6  col-sm-12 columna1">
+        <div class="col-xxl-5 col-lg-5  col-md-12 columna1">
           <h1>HOLA :D</h1>
           <h2>Bienvenidos a mi web site</h2>
           <h3>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
            Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
            Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3>
-           <div class="container logos">
+           <div class="container fluid logos">
             <div class="row ">
               <div class="col"><img src="img/illustrator.png" width="45px" alt="adobe illustrator"></div>
               <div class="col"><img src="img/photoshop.png" width="45px" alt="adobe photoshop"></div>
@@ -71,7 +71,7 @@
             </div>
           </div>
        </div>
-           <div class="col-xxl-5 col-md-5 col-sm-12" id="erika" >
+           <div class="col-xxl-5 col-lg-7 col-md-12 columna2"  >
           <img src="img/erikainicio.png" class="img-fluid" alt="erika" >
         </div>
       </div>
