--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -37,13 +37,14 @@
       </div>
     </nav>
   </header>
-  <main class="container fluid">
-    <img src="../img/portfolio.jpg" class="img-fluid" alt="...">
-    <div class="col-lg-7 col-sm-12"> <p id="sobremi">SOBRE MI</p></div>
+  <main class="container fluid encabezado">
+    <img src="../img/portfolio.png" class="img-fluid" alt="...">
+    <img src="../img/fondo portfolio.png" width="100%" class="img-fluid" alt="...">
+    <img src="../img/porfolio texto.png" class="img-fluid texto" alt="">
   </main>
 
 
-  <section>
+  <section class="container fluid" >
     <div class="text-center">
       <img src="../img/identidad.png" class="rounded" alt="..." width="60%">
     </div>
