--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -48,23 +48,31 @@
     <div class="text-center">
       <img src="../img/identidad.png" class="rounded" alt="..." width="60%">
     </div>
+    <div class="piedeimagen container fluid"  >
     <p>IDENTIDAD CORPORATIVA</p>
-          <hr width="90%" >
+          <hr width="80%" >
+        </div>
     <div class="text-center">
       <img src="../img/etiquetas.png" class="rounded" alt="..." width="60%">
     </div>
-    <p>ETIQUETAS Y EMPAQUES</p>
-          <hr width="90%" >
+         <div class="piedeimagen container fluid">
+          <p>ETIQUETAS Y EMPAQUES</p>
+          <hr width="80%" >
+        </div>
     <div class="text-center">
       <img src="../img/uxui.png" class="rounded" alt="..." width="60%">
     </div>
+        <div class="piedeimagen container fluid">
     <p>PROYECTOS UX/UI</p>
-          <hr width="90%" >
+          <hr width="80%" >
+        </div>
     <div class="text-center">
       <img src="../img/ilustracion.png" class="rounded" alt="..." width="60%">
     </div>
+    <div class="piedeimagen container fluid">
     <p>ILUSTRACIONES</p>
-    <hr width="90%" >
+    <hr width="80%" >
+  </div>
   </section>
 
 </footer> 
