--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,24 +1,29 @@
 <!doctype html>
 <html lang="es">
-   
-  <head>
 
-    <meta charset="UTF-8">
-    <title>erika romero</title> <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;800&family=Montserrat:wght@300;500;800&display=swap" rel="stylesheet">
+<head>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>erika romero</title>
+  <meta charset="UTF-8">
+  <title>erika romero</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;800&family=Montserrat:wght@300;500;800&display=swap"
+    rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilos.css">
+  <title>erika romero</title>
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light  ">
       <div class="container fluid">
-        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300"
-           alt="" srcset=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,41 +49,41 @@
   </main>
 
 
-  <section class="container fluid" >
+  <section class="container fluid">
     <div class="text-center">
-      <img src="../img/identidad.png" class="rounded" alt="..." width="60%">
-    </div>
-    <div class="piedeimagen container fluid"  >
-    <p>IDENTIDAD CORPORATIVA</p>
-          <hr width="80%" >
-        </div>
-    <div class="text-center">
-      <img src="../img/etiquetas.png" class="rounded" alt="..." width="60%">
-    </div>
-         <div class="piedeimagen container fluid">
-          <p>ETIQUETAS Y EMPAQUES</p>
-          <hr width="80%" >
-        </div>
-    <div class="text-center">
-      <img src="../img/uxui.png" class="rounded" alt="..." width="60%">
-    </div>
-        <div class="piedeimagen container fluid">
-    <p>PROYECTOS UX/UI</p>
-          <hr width="80%" >
-        </div>
-    <div class="text-center">
-      <img src="../img/ilustracion.png" class="rounded" alt="..." width="60%">
+     <a href="../html/portfolio/identidadcorporativa.html"> <img src="../img/identidad.png" class="rounded" alt="..." width="60%"></a>
     </div>
     <div class="piedeimagen container fluid">
-    <p>ILUSTRACIONES</p>
-    <hr width="80%" >
-  </div>
+     <a href="../html/portfolio/identidadcorporativa.html"> <p>IDENTIDAD CORPORATIVA</p></a>
+      <hr width="80%">
+    </div>
+    <div class="text-center">
+     <a href="../html/portfolio/etiquetasyempaques.html"> <img src="../img/etiquetas.png" class="rounded" alt="..." width="60%" ></a>
+    </div>
+    <div class="piedeimagen container fluid">
+    <a href="../html/portfolio/etiquetasyempaques.html">  <p >ETIQUETAS Y EMPAQUES</p></a>
+      <hr width="80%">
+    </div>
+    <div class="text-center">
+     <a href="../html/portfolio/proyectosuxui.html"> <img src="../img/uxui.png" class="rounded" alt="..." width="60%"></a>
+    </div>
+    <div class="piedeimagen container fluid">
+     <a href="../html/portfolio/proyectosuxui.html"> <p>PROYECTOS UX/UI</p></a>
+      <hr width="80%">
+    </div>
+    <div class="text-center">
+     <a href="../html/portfolio/ilustraciones.html"> <img src="../img/ilustracion.png" class="rounded" alt="..." width="60%"></a>
+    </div>
+    <div class="piedeimagen container flui">
+     <a href="html/portfolio/ilustraciones.html"> <p>ILUSTRACIONES</p></a>
+      <hr width="80%">
+    </div>
   </section>
 
-</footer> 
-<footer>
+  </footer>
+  <footer>
     <div class="container fluid">
-       <div class="row pt-3" >
+      <div class="row pt-3">
 
         <div class="col-sm-12 col-md-6 ">
           <p>Todos los derechos reservados</p>
@@ -96,13 +101,16 @@
         <div class="col-sm-4 col-md-1">
           <img src="../img/facebook.png" class="img-fluid" alt="" width="28px">
         </div>
-       </div>
-        </div>
-      </footer> 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/estilos.css">
-         
-            
+      </div>
+    </div>
+  </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/estilos.css">
+
+
 </body>
+
 </html>
