--- a/html/portfolio/etiquetasyempaques.html
+++ b/html/portfolio/etiquetasyempaques.html
@@ -13,7 +13,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="../../css/estilos.css">
   <title>erika romero</title>
 </head>
 
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light  ">
       <div class="container fluid">
-        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
+        <a class="navbar-brand" href="#"><img src="../../img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="../index.html">INICIO</a>
+              <a class="nav-link " aria-current="page" href="../../index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="../html/portfolio.html">PORFOLIO</a>
+              <a class="nav-link " href="../../html/portfolio.html">PORFOLIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="html/contacto.html">CONTACTO</a>
+              <a class="nav-link active" href="../../html/contacto.html">CONTACTO</a>
             </li>
           </ul>
         </div>
@@ -44,40 +44,12 @@
   </header>
 
   <section>
-    <div class="text-center">
-     <h2> <p>Si quieres más información <strong> escríbeme ;)</strong> </p></h2>
-    </div>
-    <div>
-      <form>
-        <div class="col-xxl-4 col-lg-5 col-sm-10 ">
-          <input type="text" class="form-control" id="inputname" placeholder="Tú nombre*" required>
-        </div>
-
-        <div class="col-xxl-4 col-lg-5 col-sm-10">
-          <input type="text" class="form-control" id="inputempresa" placeholder="Nombre de la empresa">
-        </div>
-        <div class="col-xxl-4 col-lg-5 col-sm-10 ">
-          <input type="email" class="form-control" id="inputEmail" placeholder="E-mail*" required>
-        </div>
-
-        <div class="col-xxl-4 col-lg-5 col-sm-10">
-          <textarea name="" id="" cols="30" rows="5" placeholder="Comentarios">
-            </textarea>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">¡Hablemos!</button>
-        </div>
-    </div>
-
-    </form>
-    </div>
+ 
   </section>
 
   <footer>
     <div class="container fluid">
       <div class="row pt-3">
-
-
         <div class="col-sm-12 col-md-6 ">
           <p>Todos los derechos reservados</p>
         </div>
@@ -86,13 +58,13 @@
         </div>
 
         <div class="col-sm-4 col-md-1">
-          <img src="../img/behance.png" class="img-fluid" width="28px">
+          <img src="../../img/behance.png" class="img-fluid" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <img src="../img/instagram.png" class="img-fluid" alt="" width="28px">
+          <img src="../../img/instagram.png" class="img-fluid" alt="" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <a href="https://www.facebook.com/erika.mver"> <img src="../img/facebook.png" class="img-fluid" alt=""
+          <a href="https://www.facebook.com/erika.mver"> <img src="../../img/facebook.png" class="img-fluid" alt=""
               width="28px">
           </a>
         </div>
