--- a/index.html
+++ b/index.html
@@ -1,93 +1,98 @@
 <!doctype html>
 <html lang="es">
-   
-  <head>
 
-    <meta charset="UTF-8">
-    <title>erika romero</title> 
+<head>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos.css">
-    <title>erika romero</title>
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport">
+  <meta name="description" content="Mi pagina web, Portfolio de diseño">
+  <meta name="keyworrds"
+    content="Portfolio, Erika Romero, diseño grafico, identidad, empaques, etiquetas, diseño UX UI">
+  <title>erika romero</title>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light  ">
-        <div class="container fluid">
-          <a class="navbar-brand" href=
-          "#"><img src="img/logo.png" class="img-fluid" width="300"
-             alt="" srcset=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="html/portfolio.html">PORFOLIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="html/contacto.html">CONTACTO</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="/estilos.css">
+  <title>erika romero</title>
+</head>
 
-    <main class="container fluid frase">
-          <div class="col-md-6 col-sm-12">
-              <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
-              <h3>John Maeda</h3>
-          </div>
-      </section>
-    </main>
-    <div class="piedeimagen container fluid ">
-      <p>DISEÑO GRÁFICO / ILUSTRACIÓN / UX IU</p>
-      <hr width="80%" >
-    </div>
-
-
-  <section  class="seccion2 container fluid ">
-   <img src="img/sobremi.png" class="img-fluid sobremi"  alt="sobre mi">
-      <div class="row">
-        <div class="col-xxl-5 col-lg-5  col-md-12 columna1">
-          <h1>HOLA :D</h1>
-          <h2>Bienvenidos a mi web site</h2>
-          <h3>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
-           Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
-           Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3>
-           <div class="container fluid logos">
-            <div class="row ">
-              <div class="col"><img src="img/illustrator.png" width="45px" alt="adobe illustrator"></div>
-              <div class="col"><img src="img/photoshop.png" width="45px" alt="adobe photoshop"></div>
-              <div class="col"><img src="img/indesing.png" width="45px" alt="adobe indesing"></div>
-              <div class="col"><img src="img/afterefects.png"  width="45px" alt="adobe afterefects"></div>
-              <div class="col"><img src="img/corel.png"  width="45px" alt="corel draw"></div>
-              <div class="col"><img src="img/figma.png"  width="45px" alt="figma"></div>
-            </div>
-          </div>
-       </div>
-           <div class="col-xxl-5 col-lg-7 col-md-12 columna2"  >
-          <img src="img/erikainicio.png" class="img-fluid" alt="erika" >
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light  ">
+      <div class="container fluid">
+        <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/portfolio.html">PORFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/contacto.html">CONTACTO</a>
+            </li>
+          </ul>
         </div>
       </div>
+    </nav>
+  </header>
+
+  <main class="container fluid frase">
+    <div class="col-md-6 col-sm-12">
+      <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
+      <h3>John Maeda</h3>
+    </div>
+    </section>
+  </main>
+  <div class="piedeimagen container fluid ">
+    <p>DISEÑO GRÁFICO / ILUSTRACIÓN / UX IU</p>
+    <hr width="80%">
+  </div>
+
+
+  <section class="seccion2 container fluid ">
+    <img src="img/sobremi.png" class="img-fluid sobremi" alt="sobre mi">
+    <div class="row">
+      <div class="col-xxl-5 col-lg-5  col-md-12 columna1">
+        <h1>HOLA <strong>:D</strong></h1>
+        <h2>Bienvenidos a mi web site</h2>
+        <h3>Mi nombre es Erika Romero, soy Licenciada en Diseño gráfico con más de 5 años de experiencia en diseño de
+          identidad corporativa, empaques, publicidad para medios impresos y redes sociales.
+          Actualmente estoy incursionando en el mundo de la ilustración, diseño UX UI y desarrollo web.
+          Si deseas conocer un poco mas mi trabajo te invito a ver <a href="html/portfolio.html">mi portfolio.</a> </h3>
+        <div class="container fluid logos">
+          <div class="row ">
+            <div class="col"><img src="img/illustrator.png" width="45px" alt="adobe illustrator"></div>
+            <div class="col"><img src="img/photoshop.png" width="45px" alt="adobe photoshop"></div>
+            <div class="col"><img src="img/indesing.png" width="45px" alt="adobe indesing"></div>
+            <div class="col"><img src="img/afterefects.png" width="45px" alt="adobe afterefects"></div>
+            <div class="col"><img src="img/corel.png" width="45px" alt="corel draw"></div>
+            <div class="col"><img src="img/figma.png" width="45px" alt="figma"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xxl-5 col-lg-7 col-md-12 columna2">
+        <img src="img/erikainicio.png" class="img-fluid" alt="erika">
+      </div>
+    </div>
     </div>
     <div class="container fluid"></div>
-  <div class= > 
-    
+    <div class=>
 
 
-  </div>
-</section>
 
-<footer>
+    </div>
+  </section>
+
+  <footer>
     <div class="container fluid">
-       <div class="row pt-3" >
-   
+      <div class="row pt-3">
+
 
         <div class="col-sm-12 col-md-6 ">
           <p>Todos los derechos reservados</p>
@@ -103,24 +108,29 @@
           <img src="img/instagram.png" class="img-fluid" alt="logo instagram" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-         <a href="https://www.facebook.com/erika.mver"> <img src="img/facebook.png" class="img-fluid" alt="logo facebook" width="28px">
-         </a>
+          <a href="https://www.facebook.com/erika.mver"> <img src="img/facebook.png" class="img-fluid"
+              alt="logo facebook" width="28px">
+          </a>
         </div>
 
-       </div>
-        </div>
-      </footer> 
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilos.css">
- 
-  </body>
+  </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/estilos.css">
+
+</body>
+
 </html>
 
 
 
 
 
-   
+
 </body>
+
 </html>
