--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light  ">
       <div class="container fluid">
-        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
+        <a class="navbar-brand" href="#"><img src="../img/logo.png" class="img-fluid" width="300" alt="imagen logo erika romero" srcset=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,36 +43,36 @@
     </nav>
   </header>
   <main class="container fluid encabezado">
-    <img src="../img/portfolio.png" class="img-fluid" alt="...">
-    <img src="../img/fondo portfolio.png" width="100%" class="img-fluid" alt="...">
-    <img src="../img/porfolio texto.png" class="img-fluid texto" alt="">
+    <img src="../img/portfolio.png" class="img-fluid" alt="simbolo cara feliz">
+    <img src="../img/fondo portfolio.png" width="100%" class="img-fluid" alt="chica en escritorio">
+    <img src="../img/porfolio texto.png" class="img-fluid texto" alt="frase mi portfolio">
   </main>
 
 
   <section class="container fluid">
     <div class="text-center">
-     <a href="../html/portfolio/identidadcorporativa.html"> <img src="../img/identidad.png" class="rounded" alt="..." width="60%"></a>
+     <a href="../html/portfolio/identidadcorporativa.html"> <img src="../img/identidad.png" class="rounded" alt="mockup papeleria" width="60%"></a>
     </div>
     <div class="piedeimagen container fluid">
      <a href="../html/portfolio/identidadcorporativa.html"> <p>IDENTIDAD CORPORATIVA</p></a>
       <hr width="80%">
     </div>
     <div class="text-center">
-     <a href="../html/portfolio/etiquetasyempaques.html"> <img src="../img/etiquetas.png" class="rounded" alt="..." width="60%" ></a>
+     <a href="../html/portfolio/etiquetasyempaques.html"> <img src="../img/etiquetas.png" class="rounded" alt="mockup etiquetas" width="60%" ></a>
     </div>
     <div class="piedeimagen container fluid">
     <a href="../html/portfolio/etiquetasyempaques.html">  <p >ETIQUETAS Y EMPAQUES</p></a>
       <hr width="80%">
     </div>
     <div class="text-center">
-     <a href="../html/portfolio/proyectosuxui.html"> <img src="../img/uxui.png" class="rounded" alt="..." width="60%"></a>
+     <a href="../html/portfolio/proyectosuxui.html"> <img src="../img/uxui.png" class="rounded" alt="mockup app movil" width="60%"></a>
     </div>
     <div class="piedeimagen container fluid">
      <a href="../html/portfolio/proyectosuxui.html"> <p>PROYECTOS UX/UI</p></a>
       <hr width="80%">
     </div>
     <div class="text-center">
-     <a href="../html/portfolio/ilustraciones.html"> <img src="../img/ilustracion.png" class="rounded" alt="..." width="60%"></a>
+     <a href="../html/portfolio/ilustraciones.html"> <img src="../img/ilustracion.png" class="rounded" alt="ilustracion de pato" width="60%"></a>
     </div>
     <div class="piedeimagen container flui">
      <a href="html/portfolio/ilustraciones.html"> <p>ILUSTRACIONES</p></a>
