--- a/html/portfolio/identidadcorporativa.html
+++ b/html/portfolio/identidadcorporativa.html
@@ -44,7 +44,42 @@
   </header>
 
   <section>
+    <div class="container fluid titulo">
+<img src="../../img/identidad corporativa.png" class="img-fluid">
+    <img src="../../img/identidadprincipal.png" class="img-fluid" alt="..." width="100%">
+  </div>
+  <div class="piedeimagen container flui">
+    <hr width="80%">
+  </div>
 
+
+<div class="cards container fluid">
+  <div class="wrapper col-xxl-4 col-lg-4  col-md-12 ">
+    <div class="card"><img src="../../img/samadhi.png"/>
+      <div class="info">
+        <h2>SAMADHI</h2>
+        <h3><p>Identidad corporativa centro medico estetico</p></h3>
+        <button>Ver mas</button>
+      </div>
+    </div>
+    <div class="card"><img src="../../img/jcv quirurgicos.png"/>
+      <div class="info">
+        <h2>JCV QUIRURGUICOS</h2>
+       <h3> <p>Papeleria comercial</p></h3>
+        <button>ver mas</button>
+      </div>
+    </div>
+    <div class="card"><img src="../../img/drs lengua y henao.png"/>
+      <div class="info">
+        <h2>DRS. LENGUA & HENAO</h2>
+       </h3> <p>Marca y papeleria comercial</p><h3>
+        <button>Ver mas</button>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
   </section>
 
   <footer>
