--- a/html/portfolio/etiquetasyempaques.html
+++ b/html/portfolio/etiquetasyempaques.html
@@ -44,7 +44,39 @@
   </header>
 
   <section>
- 
+    <div class="container fluid titulo">
+      <img src="../../img/etiquetas y empaques texto.png" class="img-fluid">
+          <img src="../../img/etiquetasprincipal.png" class="img-fluid" alt="..." width="100%">
+        </div>
+        <div class="piedeimagen container flui">
+          <hr width="80%">
+        </div>
+      <div class="cards container fluid">
+        <div class="wrapper col-xxl-4 col-lg-4  col-md-12 ">
+          <div class="card"><img src="../../img/etiquetas2.png"/>
+            <div class="info">
+              <h2>CANNOR ORIENTE</h2>
+              <h3><p>Eiquetas y bolsas para cafè</p></h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/caja.png"/>
+            <div class="info">
+              <h2>TALATAA</h2>
+             <h3> <p>Cajas y bolsas para accesorios</p></h3>
+              <button>ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/cafe bolivar.png"/>
+            <div class="info">
+              <h2>CAFE BOLIVAR</h2>
+             </h3> <p>Bolsas y cajas para cafè gourmet</p><h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
   </section>
 
   <footer>
