--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light  ">
       <div class="container fluid">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="300" alt="" srcset=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="300" alt="imagen logo erika romero" srcset=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,6 @@
       </div>
     </nav>
   </header>
-
   <main class="container fluid frase">
     <div class="col-md-6 col-sm-12">
       <h2>«La simplicidad es sustraer lo obvio y añadir lo significativo.»</h2>
@@ -53,8 +52,6 @@
     <p>DISEÑO GRÁFICO / ILUSTRACIÓN / UX IU</p>
     <hr width="80%">
   </div>
-
-
   <section class="seccion2 container fluid ">
     <img src="img/sobremi.png" class="img-fluid sobremi" alt="sobre mi">
     <div class="row">
@@ -83,12 +80,8 @@
     </div>
     <div class="container fluid"></div>
     <div class=>
-
-
-
     </div>
   </section>
-
   <footer>
     <div class="container fluid">
       <div class="row pt-3">
