--- a/html/portfolio/ilustraciones.html
+++ b/html/portfolio/ilustraciones.html
@@ -44,40 +44,44 @@
   </header>
 
   <section>
-    <div class="text-center">
-     <h2> <p>Si quieres más información <strong> escríbeme ;)</strong> </p></h2>
-    </div>
-    <div>
-      <form>
-        <div class="col-xxl-4 col-lg-5 col-sm-10 ">
-          <input type="text" class="form-control" id="inputname" placeholder="Tú nombre*" required>
+    <div class="container fluid titulo">
+      <img src="../../img/ilustraciones texto.png" class="img-fluid">
+          <img src="../../img/ilustracion principal.png" class="img-fluid" alt="..." width="100%">
         </div>
-
-        <div class="col-xxl-4 col-lg-5 col-sm-10">
-          <input type="text" class="form-control" id="inputempresa" placeholder="Nombre de la empresa">
+        <div class="piedeimagen container flui">
+          <hr width="80%">
         </div>
-        <div class="col-xxl-4 col-lg-5 col-sm-10 ">
-          <input type="email" class="form-control" id="inputEmail" placeholder="E-mail*" required>
+      <div class="cards container fluid">
+        <div class="wrapper col-xxl-4 col-lg-4  col-md-12 ">
+          <div class="card"><img src="../../img/niños.png"/>
+            <div class="info">
+              <h2>HISTORIA DE LA CREACIÒN</h2>
+              <h3><p>Libro ilustrado para niños de 3 a 6 años</p></h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/fantasia.png"/>
+            <div class="info">
+              <h2>FANTASIA</h2>
+             <h3> <p>Ilustraciòn digital</p></h3>
+              <button>ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/bocetos.png"/>
+            <div class="info">
+              <h2>BOCETOS</h2>
+             </h3> <p>Inicios: lapiz y papel </p><h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
         </div>
-
-        <div class="col-xxl-4 col-lg-5 col-sm-10">
-          <textarea name="" id="" cols="30" rows="5" placeholder="Comentarios">
-            </textarea>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">¡Hablemos!</button>
-        </div>
-    </div>
-
-    </form>
-    </div>
+      </div>
+      </div>
   </section>
 
   <footer>
     <div class="container fluid">
       <div class="row pt-3">
-
-
         <div class="col-sm-12 col-md-6 ">
           <p>Todos los derechos reservados</p>
         </div>
@@ -86,13 +90,13 @@
         </div>
 
         <div class="col-sm-4 col-md-1">
-          <img src="../img/behance.png" class="img-fluid" width="28px">
+          <img src="../../img/behance.png" class="img-fluid" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <img src="../img/instagram.png" class="img-fluid" alt="" width="28px">
+          <img src="../../img/instagram.png" class="img-fluid" alt="" width="28px">
         </div>
         <div class="col-sm-4 col-md-1">
-          <a href="https://www.facebook.com/erika.mver"> <img src="../img/facebook.png" class="img-fluid" alt=""
+          <a href="https://www.facebook.com/erika.mver"> <img src="../../img/facebook.png" class="img-fluid" alt=""
               width="28px">
           </a>
         </div>
@@ -100,7 +104,6 @@
       </div>
     </div>
   </footer>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
