--- a/html/portfolio/proyectosuxui.html
+++ b/html/portfolio/proyectosuxui.html
@@ -44,36 +44,66 @@
   </header>
 
   <section>
-    
+    <div class="container fluid titulo">
+      <img src="../../img/proyectos ux ui texto.png" class="img-fluid">
+          <img src="../../img/UXUI PRINCIPAL.png" class="img-fluid" alt="..." width="100%">
+        </div>
+        <div class="piedeimagen container flui">
+          <hr width="80%">
+        </div>
+      <div class="cards container fluid">
+        <div class="wrapper col-xxl-4 col-lg-4  col-md-12 ">
+          <div class="card"><img src="../../img/UX.png"/>
+            <div class="info">
+              <h2>SAMADHI</h2>
+              <h3><p>Identidad corporativa centro medico estetico</p></h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/ui.png"/>
+            <div class="info">
+              <h2>JCV QUIRURGUICOS</h2>
+             <h3> <p>Papeleria comercial</p></h3>
+              <button>ver mas</button>
+            </div>
+          </div>
+          <div class="card"><img src="../../img/PROTOTIPO.png"/>
+            <div class="info">
+              <h2>DRS. LENGUA & HENAO</h2>
+             </h3> <p>Marca y papeleria comercial</p><h3>
+              <button>Ver mas</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
   </section>
 
   <footer>
-    <div class="container fluid">
-      <div class="row pt-3">
-
-
-        <div class="col-sm-12 col-md-6 ">
-          <p>Todos los derechos reservados</p>
+      <div class="container fluid">
+        <div class="row pt-3">
+          <div class="col-sm-12 col-md-6 ">
+            <p>Todos los derechos reservados</p>
+          </div>
+          <div class="col-sm-0 col-md-3 ">
+            <p></p>
+          </div>
+  
+          <div class="col-sm-4 col-md-1">
+            <img src="../../img/behance.png" class="img-fluid" width="28px">
+          </div>
+          <div class="col-sm-4 col-md-1">
+            <img src="../../img/instagram.png" class="img-fluid" alt="" width="28px">
+          </div>
+          <div class="col-sm-4 col-md-1">
+            <a href="https://www.facebook.com/erika.mver"> <img src="../../img/facebook.png" class="img-fluid" alt=""
+                width="28px">
+            </a>
+          </div>
+  
         </div>
-        <div class="col-sm-0 col-md-3 ">
-          <p></p>
-        </div>
-
-        <div class="col-sm-4 col-md-1">
-          <img src="../img/behance.png" class="img-fluid" width="28px">
-        </div>
-        <div class="col-sm-4 col-md-1">
-          <img src="../img/instagram.png" class="img-fluid" alt="" width="28px">
-        </div>
-        <div class="col-sm-4 col-md-1">
-          <a href="https://www.facebook.com/erika.mver"> <img src="../img/facebook.png" class="img-fluid" alt=""
-              width="28px">
-          </a>
-        </div>
-
       </div>
-    </div>
-  </footer>
+    </footer>
 
 
 
