--- a/html/portfolio/proyectosuxui.html
+++ b/html/portfolio/proyectosuxui.html
@@ -55,22 +55,22 @@
         <div class="wrapper col-xxl-4 col-lg-4  col-md-12 ">
           <div class="card"><img src="../../img/UX.png"/>
             <div class="info">
-              <h2>SAMADHI</h2>
-              <h3><p>Identidad corporativa centro medico estetico</p></h3>
+              <h2>UX</h2>
+              <h3><p>Experiencia de usuario </p></h3>
               <button>Ver mas</button>
             </div>
           </div>
           <div class="card"><img src="../../img/ui.png"/>
             <div class="info">
-              <h2>JCV QUIRURGUICOS</h2>
-             <h3> <p>Papeleria comercial</p></h3>
+              <h2>UI</h2>
+             <h3> <p>Diseñando la interface de usuario</p></h3>
               <button>ver mas</button>
             </div>
           </div>
           <div class="card"><img src="../../img/PROTOTIPO.png"/>
             <div class="info">
-              <h2>DRS. LENGUA & HENAO</h2>
-             </h3> <p>Marca y papeleria comercial</p><h3>
+              <h2>PROTOTIPO</h2>
+             </h3> <p>Testeos y pruebas de usabilidad del prototipo</p><h3>
               <button>Ver mas</button>
             </div>
           </div>
